examples/negative/derive/derive_binserialize_sum_payload.kai
# Negative fixture (#511 / derive contract): `#derive(BinSerialize)`
# on a sum-type whose variant carries a payload with no
# BinSerialize impl must be rejected with a diagnostic naming the
# offending variant/type pair.

type Color = Red | Blue

#derive(BinSerialize)
type Tagged = T(Color, Int)

fn main() : Int = 0
